remove unused fields in advertModel